# FirstAIAgent

./: .env.example  .gitignore  README  README.md  main.py  pyproject.toml
app/: main.py
app/api/: chat_ui.py  routes.py  schemas.py
app/core/: config.py  errors.py  logging.py
app/data/rfqs/: sample_rfq.json
app/domain/: models.py  policy.py  scoring.py  state_machine.py
app/services/: chat_simulator.py  memory_json.py  orchestrator.py  report_builder.py  rfq_loader.py
app/tools/llm/: base.py  ollama_local.py  openai_api.py
app/tools/messaging/: base.py  email_stub.py  whatsapp_stub.py
app/tools/web/: price_lookup.py  scraper_playwright.py  search_stub.py
buyer_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
