# pyproject.toml
[project]
name = "buyer-agent"
version = "0.1.0"
description = "Generic buyer agent (FastAPI) with JSON memory and pluggable tools."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "playwright>=1.45"
]